# flies_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
abstract_qml_handler/: CMakeLists.txt  abstract_qml_handler.cpp  abstract_qml_handler.h
board/: CMakeLists.txt  board.cpp  board.h
board_model/: CMakeLists.txt  board_model.cpp  board_model.h
cell/: CMakeLists.txt  cell.cpp  cell.h
cells_model/: CMakeLists.txt  cells_model.cpp  cells_model.h
data_holder/: CMakeLists.txt  data_holder.cpp  data_holder.h
flies_model/: CMakeLists.txt  flies_model.cpp  flies_model.h
fly/: CMakeLists.txt  flies_holder.cpp  fly.cpp  fly.h
main_window_handler/: CMakeLists.txt  main_window_handler.cpp  main_window_handler.h
qml/: Board.qml  ButtonsBar.qml  CellSettings.qml  ControlsTab.qml  FlySettings.qml  MainField.qml  SettingsBar.qml  SettingsTabBoard.qml  SettingsTabFlies.qml  SettingsTitle.qml  main.qml  qml.qrc
qml_engine_configurator/: CMakeLists.txt  qml_engine_configurator.cpp  qml_engine_configurator.h
session_handler/: CMakeLists.txt  session_handler.cpp  session_handler.h
support/: CMakeLists.txt  support.cpp  support.h
ui/: CMakeLists.txt
ui/main_window_handler/: main_window_handler.cpp  main_window_handler.h
ui/qml/: main.qml
ui/qml_engine_configurator/: CMakeLists.txt  qml_engine_configurator.h
